# ComfyUI-OpenSoraPlan

./: README.md  example-workflow-opensoraplan3-2i2v.json  example-workflow-opensoraplan3-6i2v.json  example-workflow-opensoraplan3-i2v.json  example-workflow-opensoraplan3-t2v.json  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
opensora1/dataset/: extract_feature_dataset.py  feature_datasets.py  landscope.py  sky_datasets.py  t2v_datasets.py  ucf101.py
opensora1/eval/: cal_flolpips.py  eval_common_metric.py
opensora1/sample/: pipeline_videogen.py  sample.py  sample_t2v.py  transport_sample.py
opensora2/: npu_config.py
opensora2/acceleration/: communications.py
opensora2/adaptor/: engine.py  stage_1_and_2.py
opensora2/dataset/: __init__.py  inpaint_datasets.py  t2v_datasets.py
opensora2/eval/: cal_flolpips.py  eval_common_metric.py
opensora2/sample/: pipeline_inpaint.py  pipeline_inpaint_sp.py  pipeline_opensora.py  pipeline_opensora_sp.py  sample_inpaint.py  sample_inpaint_ddp.py  sample_inpaint_sp.py  sample_t2v.py  sample_t2v_ddp.py  sample_t2v_on_npu.py  sample_t2v_sp.py  sample_t2v_sp_on_npu.py
opensora2/utils/: communications.py  lora_utils.py
opensora3/: npu_config.py
opensora3/acceleration/: communications.py
opensora3/adaptor/: engine.py  stage_1_and_2.py
opensora3/dataset/: __init__.py  inpaint_dataset.py  t2v_datasets.py  virtual_disk.py
opensora3/sample/: .pipeline_inpaint.py.swp  pipeline_inpaint.py  pipeline_opensora.py  rec_image.py  rec_video.py  sample.py
opensora3/utils/: communications.py  (+2 more)
(+34 files in other folders)
